[gd_scene load_steps=9 format=3 uid="uid://t3m6i6hf57du"]

[ext_resource type="Texture2D" uid="uid://cejte58omgssg" path="res://UI/Loops/dot.png" id="1_6kdxl"]
[ext_resource type="FontFile" uid="uid://cxibkck3y8243" path="res://Fonts/DigitalDisco.ttf" id="1_r402l"]
[ext_resource type="Script" uid="uid://j5qabp8fw156" path="res://Menu/Settings/settings.gd" id="1_ycrrg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r402l"]
bg_color = Color(0.177782, 0.486903, 0.682989, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6kdxl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ycrrg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k17fj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fd4a2"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_ycrrg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r402l")

[node name="BackButton" type="Button" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -183.0
offset_right = 29.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("1_r402l")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_6kdxl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ycrrg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k17fj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fd4a2")
text = "Save and Return"
icon = ExtResource("1_6kdxl")
flat = true

[node name="Audio" type="VBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -79.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolume" type="HSplitContainer" parent="CanvasLayer/Control/Panel/Audio"]
custom_minimum_size = Vector2(800, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
split_offset = 410

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Audio/MasterVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/normal_font = ExtResource("1_r402l")
theme_override_font_sizes/normal_font_size = 30
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="CanvasLayer/Control/Panel/Audio/MasterVolume"]
layout_mode = 2
size_flags_vertical = 4
min_value = -50.0
max_value = 0.0
step = -1.0
value = -10.0
scrollable = false

[node name="MusicVolume" type="HSplitContainer" parent="CanvasLayer/Control/Panel/Audio"]
custom_minimum_size = Vector2(800, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
split_offset = 410

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Audio/MusicVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/normal_font = ExtResource("1_r402l")
theme_override_font_sizes/normal_font_size = 30
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/Control/Panel/Audio/MusicVolume"]
layout_mode = 2
size_flags_vertical = 4
min_value = -50.0
max_value = 0.0
step = -1.0
value = -10.0
scrollable = false

[node name="SoundVolume" type="HSplitContainer" parent="CanvasLayer/Control/Panel/Audio"]
custom_minimum_size = Vector2(800, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
split_offset = 410

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Audio/SoundVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/normal_font = ExtResource("1_r402l")
theme_override_font_sizes/normal_font_size = 30
text = "Sound Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundSlider" type="HSlider" parent="CanvasLayer/Control/Panel/Audio/SoundVolume"]
layout_mode = 2
size_flags_vertical = 4
min_value = -50.0
max_value = 0.0
step = -1.0
value = -10.0
scrollable = false

[connection signal="pressed" from="CanvasLayer/Control/Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/Control/Panel/Audio/MasterVolume/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/Panel/Audio/MusicVolume/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/Panel/Audio/SoundVolume/SoundSlider" to="." method="_on_sound_slider_value_changed"]
